Fixes tinited home image on mobile.
On mobile device, when needing to scroll the tinting of the image would
"run out." This commit updates the style to resolve that issue.

Thanks to [this CSS-Tricks
post](https://css-tricks.com/tinted-images-multiple-backgrounds/) for
helping with tinting over an image.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,16 +1,15 @@
 html.main-page{
-  height: 100%;
-  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-
-  background: url(/images/main_background.jpeg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
   body{
     height: 100%;
-    background-color: rgba(66,66,66,0.35);
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+
+    background:
+     linear-gradient(rgba(66, 66, 66, 0.35), rgba(66, 66, 66, 0.35)),
+     url(/images/main_background.jpeg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 
   .content{
